# financial-ai-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/docs/: BACKEND_REPORT.md
backend/src/: config.py  db.py  main.py
backend/src/agent/: __init__.py  graph.py  sql_utils.py  state.py  tools.py
backend/src/agent/nodes/: __init__.py  chat.py  helpers.py  schema.py  sql.py
backend/src/agent/prompts/: __init__.py  context.yaml  loader.py
backend/src/agent/prompts/templates/: check.yaml  repair.yaml  system.yaml  write.yaml
backend/src/llm/: provider_manager.py
backend/src/models/: __init__.py  analytics.py
backend/src/routes/: __init__.py  agent.py  dashboard.py
backend/src/services/: __init__.py  analytics_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_dashboard.py
backend/tests/unit/: test_analytics_service.py
data_pipeline/: .env.example  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
data_pipeline/docs/: DATA_REPORT.md  SQL_QUERY_EXAMPLES.md  TECHNICAL_REPORT.md
data_pipeline/scripts/: recreate_views.py  reset_and_reload.py
data_pipeline/src/: financial_pipeline.py
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AssistantMessage.tsx  FinancialDashboard.tsx  Header.tsx
frontend/lib/: api.ts  prompt.ts
(+18 files in other folders)
